Perma [tier 2] dom/media/test/<test-name> | application crashed [@ libc.so + 0x1a790]
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox66 | --- | unaffected |
firefox67 | --- | unaffected |
firefox68 | blocking | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jhlin)
References
Details
(4 keywords, Whiteboard: [stockwell needswork:owner])
Crash Data
Attachments
(1 file)
#[markdown(off)]
Filed by: dluca [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=238527585&repo=autoland
61 INFO TEST-START | dom/media/test/test_arraybuffer.html
00:31:02 INFO - wait for org.mozilla.fennec_aurora complete; top activity=com.bitbar.testdroid.monitor
00:31:02 INFO - remoteautomation.py | Application ran for: 0:00:14.628684
00:31:03 INFO - mozcrash Downloading symbols from: https://queue.taskcluster.net/v1/task/N7XS0tGAR1-iP9hRJVvNYw/artifacts/public/build/target.crashreporter-symbols.zip
00:31:05 INFO - mozcrash Copy/paste: /builds/worker/workspace/build/linux64-minidump_stackwalk /tmp/tmpnOGkoX/40821aa4-fdfd-3b7c-223a-8a4bfdb85871.dmp /tmp/tmph1QZpt
00:31:11 INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/40821aa4-fdfd-3b7c-223a-8a4bfdb85871.dmp
00:31:11 INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/40821aa4-fdfd-3b7c-223a-8a4bfdb85871.extra
00:31:11 WARNING - PROCESS-CRASH | dom/media/test/test_arraybuffer.html | application crashed [@ libc.so + 0x1a790]
00:31:11 INFO - Crash dump filename: /tmp/tmpnOGkoX/40821aa4-fdfd-3b7c-223a-8a4bfdb85871.dmp
00:31:11 INFO - Operating system: Android
00:31:11 INFO - 0.0.0 Linux 4.4.56-g594d847d09a1 #1 SMP PREEMPT Thu Oct 26 22:34:08 UTC 2017 armv8l
00:31:11 INFO - CPU: arm
00:31:11 INFO - ARMv1 Qualcomm part(0x51008010) features: half,thumb,fastmult,vfpv2,edsp,neon,vfpv3,tls,vfpv4,idiva,idivt
00:31:11 INFO - 8 CPUs
00:31:11 INFO - GPU: UNKNOWN
00:31:11 INFO - Crash reason: SIGABRT
00:31:11 INFO - Crash address: 0x19a6
00:31:11 INFO - Process uptime: not available
00:31:11 INFO - Thread 73 (crashed)
00:31:11 INFO - 0 libc.so + 0x1a790
00:31:11 INFO - r0 = 0x00000000 r1 = 0x00001a52 r2 = 0x00000006 r3 = 0x00000008
00:31:11 INFO - r4 = 0x000019a6 r5 = 0x00001a52 r6 = 0xcaefc06c r7 = 0x0000010c
00:31:11 INFO - r8 = 0x00000000 r9 = 0xee3991b8 r10 = 0x0000000a r12 = 0xd0a0ce00
00:31:11 INFO - fp = 0xcaefc0b8 sp = 0xcaefc058 lr = 0xecc25dc1 pc = 0xecc1f790
00:31:11 INFO - Found by: given as instruction pointer in context
00:31:11 INFO - 1 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc064 pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 2 libart.so + 0x337127
00:31:11 INFO - sp = 0xcaefc088 pc = 0xead70129
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 3 libart.so + 0x3f4979
00:31:11 INFO - sp = 0xcaefc0b0 pc = 0xeae2d97b
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 4 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc0cc pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 5 libart.so + 0x22f48d
00:31:11 INFO - sp = 0xcaefc0f0 pc = 0xeac6848f
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 6 base.vdex + 0x6a576
00:31:11 INFO - sp = 0xcaefc0fc pc = 0xd226c578
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 7 libart.so + 0x2300b1
00:31:11 INFO - sp = 0xcaefc100 pc = 0xeac690b3
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 8 libart.so + 0x26b8a2
00:31:11 INFO - sp = 0xcaefc10c pc = 0xeaca48a4
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 9 libart.so + 0x433616
00:31:11 INFO - sp = 0xcaefc114 pc = 0xeae6c618
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 10 libart.so + 0x43366e
00:31:11 INFO - sp = 0xcaefc118 pc = 0xeae6c670
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 11 libart.so + 0x43362a
00:31:11 INFO - sp = 0xcaefc14c pc = 0xeae6c62c
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 12 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc1ac pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 13 libart.so + 0x26b8a2
00:31:11 INFO - sp = 0xcaefc1b0 pc = 0xeaca48a4
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 14 libart.so + 0x22f685
00:31:11 INFO - sp = 0xcaefc1d0 pc = 0xeac68687
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 15 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc1ec pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 16 libart.so + 0x26b357
00:31:11 INFO - sp = 0xcaefc1f4 pc = 0xeaca4359
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 17 libxul.so!mozilla::java::CodecProxy::DisposeOutput(mozilla::jni::Ref<mozilla::jni::Object, _jobject*> const&) const [jni.h:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 639 + 0x3]
00:31:11 INFO - sp = 0xcaefc1fc pc = 0xccce9f25
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 18 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc210 pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 19 libxul.so!mozilla::RemoteAudioDecoder::ProcessOutput(mozilla::jni::GlobalRef<mozilla::java::Sample>&&, mozilla::jni::GlobalRef<mozilla::java::SampleBuffer>&&) [RemoteDataDecoder.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 430 + 0x3]
00:31:11 INFO - sp = 0xcaefc230 pc = 0xccad9909
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 20 libmozglue.so!mozilla::detail::MutexImpl::unlock() [Mutex_posix.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 185 + 0x3]
00:31:11 INFO - sp = 0xcaefc248 pc = 0xd08bd69d
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 21 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc25c pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 22 dalvik-main space (region space) (deleted) + 0x258adf91
00:31:11 INFO - sp = 0xcaefc260 pc = 0x384adf93
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 23 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc27c pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 24 libxul.so!nsThreadPool::Dispatch(already_AddRefed<nsIRunnable>, unsigned int) [nsThreadPool.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 290 + 0x9]
00:31:11 INFO - sp = 0xcaefc2a0 pc = 0xcd87f0d3
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 25 libxul.so + 0x1c3b08f
00:31:11 INFO - sp = 0xcaefc2a8 pc = 0xcd87f091
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 26 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc2b0 pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 27 libxul.so!mozilla::detail::RunnableMethodImpl<RefPtr<mozilla::layers::UiCompositorControllerChild>, bool (mozilla::layers::UiCompositorControllerChild::*)(bool const&, int const&), true, (mozilla::RunnableKind)0, bool, int>::Run() [nsThreadUtils.h:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 1122 + 0x3]
00:31:11 INFO - sp = 0xcaefc2d0 pc = 0xcca2ba5b
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 28 libxul.so!mozilla::TaskQueue::Runner::Run() [TaskQueue.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 199 + 0x9]
00:31:11 INFO - sp = 0xcaefc2d8 pc = 0xcd87a879
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 29 dalvik-main space (region space) (deleted) + 0x28bcd450
00:31:11 INFO - sp = 0xcaefc2e8 pc = 0x3b7cd452
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 30 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc2f8 pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 31 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc310 pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 32 libxul.so!nsThreadPool::Run() [nsThreadPool.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 244 + 0x9]
00:31:11 INFO - sp = 0xcaefc330 pc = 0xcd87ee7f
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 33 dalvik-main space (region space) (deleted) + 0x39fe163e
00:31:11 INFO - sp = 0xcaefc348 pc = 0x4cbe1640
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 34 dalvik-main space (region space) (deleted) + 0x23e1ef86
00:31:11 INFO - sp = 0xcaefc3a4 pc = 0x36a1ef88
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 35 libxul.so!non-virtual thunk to nsThreadPool::Run() [nsThreadPool.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 0 + 0x3]
00:31:11 INFO - sp = 0xcaefc3c8 pc = 0xcd87f08b
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - 36 libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:161cd9e81d7104807d1e8a68933ca28bed1f2e8c : 1180 + 0x9]
00:31:11 INFO - sp = 0xcaefc3d0 pc = 0xcd63a657
00:31:11 INFO - Found by: stack scanning
00:31:11 INFO - Thread 0
Comment 1•6 years ago
|
||
Looks like this new perma was introduced bug Bug 1540036 landed here: https://treeherder.mozilla.org/#/jobs?repo=autoland&selectedJob=238506681&revision=6d3077516c7052e794c406920be6529b0ff0dcfd
Comment 2•6 years ago
|
||
John, please take a look.
Updated•6 years ago
|
Updated•6 years ago
|
Assignee | ||
Comment 12•6 years ago
|
||
mJavaDecoder is invalid after the decoder is shut down and should never
be used.
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 17•6 years ago
|
||
Updated•6 years ago
|
Comment 21•6 years ago
|
||
I assume Bug 1542731 is a dupe of this bug. This is currently the top crash on Fennec nightly.
Updated•6 years ago
|
![]() |
||
Comment 23•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Updated•6 years ago
|
Comment 27•5 years ago
|
||
Please specify a root cause for this bug. See :tmaity for more information.
Assignee | ||
Updated•5 years ago
|
Description
•