Bug 1542440 - Recycle sample directly rather than through CodecProxy. r=jya

mJavaDecoder is invalid after the decoder is shut down and should never
be used.

Differential Revision: https://phabricator.services.mozilla.com/D26438